<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="30dp"
    android:paddingBottom="20dp"
    android:background="@drawable/bg_black_rounded_30">
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discard_title"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:paddingHorizontal="@dimen/long_24"
        android:gravity="center"
        android:fontFamily="@font/gilroy_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="14dp"
        android:textColor="@color/disable_grey"
        android:paddingHorizontal="@dimen/long_24"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/discard_message"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"/>

    <LinearLayout
        android:id="@+id/llActions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="41dp"
        android:layout_marginHorizontal="16dp"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMessage">
        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:text="@string/common_cancel"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/gilroy_medium"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/bg_rounded_30"
            android:foreground="?android:attr/selectableItemBackground"/>

        <TextView
            android:id="@+id/tvDiscard"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:text="@string/common_discard"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:textSize="16sp"
            android:gravity="center"
            android:fontFamily="@font/gilroy_medium"
            android:background="@drawable/bg_purple_rounded_30"
            android:layout_marginStart="5dp"
            android:foreground="?android:attr/selectableItemBackground" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>