<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="invisible"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="@+id/rlView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.canhub.cropper.CropImageView
        android:id="@+id/civCropper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/rlView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cropBackgroundColor="@android:color/transparent"
        app:cropInitialCropWindowPaddingRatio="0" />

    <com.poc.photoeditor.provider.widget.RulerView
        android:id="@+id/rlView"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:visibility="invisible"
        android:layout_marginBottom="30dp"
        app:centerHeight="28dp"
        app:centerWidth="4dp"
        app:periodWidth="2dp"
        app:periodHeight="13dp"
        app:textCenterMargin="10dp"
        app:maxNumber="90"
        app:scaleHeight="5dp"
        app:scaleSpace="6dp"
        app:scaleWidth="1dp"
        app:textSize="14sp"
        app:radius="4dp"
        app:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/rvConfigs"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:id="@+id/vBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        android:visibility="visible"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlView"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvConfigs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:clipToPadding="false"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvOption"
        tools:itemCount="4"
        tools:listitem="@layout/item_text_config" />

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_edit_close"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="@dimen/long_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/ivCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_edit_check"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="@dimen/long_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/common_crop"
        android:textColor="@color/white"
        android:fontFamily="@font/gilroy_medium"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@+id/ivClose"
        app:layout_constraintEnd_toStartOf="@+id/ivCheck"
        app:layout_constraintBottom_toBottomOf="@+id/ivClose"
        app:layout_constraintStart_toEndOf="@+id/ivClose"/>

    <ImageView
        android:id="@+id/ivArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_down"
        android:layout_marginStart="@dimen/long_6"
        app:layout_constraintStart_toEndOf="@+id/tvOption"
        app:layout_constraintBottom_toBottomOf="@+id/tvOption"
        app:layout_constraintTop_toTopOf="@+id/tvOption"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:paddingBottom="115dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/tvCrop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_crop"
            android:textColor="@color/white"
            android:fontFamily="@font/gilroy_medium"
            android:textSize="16sp"
            android:layout_marginTop="58dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvRotate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_rotate"
            android:textColor="@color/disable_grey"
            android:fontFamily="@font/gilroy_medium"
            android:textSize="16sp"
            android:layout_marginTop="35dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCrop"/>

        <TextView
            android:id="@+id/tvPerspective"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_perspective"
            android:textColor="@color/disable_grey"
            android:fontFamily="@font/gilroy_medium"
            android:textSize="16sp"
            android:layout_marginTop="35dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRotate"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>