<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background="@color/black_80">

    <TextView
        android:id="@+id/tvHue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/gilroy_medium"
        android:text="@string/common_hue"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/sbHue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:max="200"
        android:paddingHorizontal="10dp"
        android:progress="100"
        android:progressDrawable="@drawable/bg_hue_progress"
        android:thumb="@drawable/bg_circle_white"
        app:layout_constraintBottom_toBottomOf="@+id/tvHue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvHue"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/tvHueValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/gilroy_medium"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/sbHue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sbHue" />

    <TextView
        android:id="@+id/tvSaturation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/gilroy_medium"
        android:text="@string/common_saturation"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHue" />

    <SeekBar
        android:id="@+id/sbSaturation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:max="200"
        android:paddingHorizontal="10dp"
        android:progress="100"
        android:progressDrawable="@drawable/bg_saturation_progress"
        android:thumb="@drawable/bg_circle_white"
        app:layout_constraintBottom_toBottomOf="@+id/tvSaturation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvSaturation"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/tvSaturationValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/gilroy_medium"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/sbSaturation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sbSaturation" />

    <TextView
        android:id="@+id/tvLuminance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/gilroy_medium"
        android:text="@string/common_luminance"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSaturation" />

    <SeekBar
        android:id="@+id/sbLuminance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:max="200"
        android:paddingHorizontal="10dp"
        android:progress="100"
        android:progressDrawable="@drawable/bg_luminance_progress"
        android:thumb="@drawable/bg_circle_white"
        app:layout_constraintBottom_toBottomOf="@+id/tvLuminance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvLuminance"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/tvLuminanceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/gilroy_medium"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/sbLuminance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sbLuminance" />

    <View
        android:id="@+id/vBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLuminance" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvColors"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLuminance"
        tools:listitem="@layout/item_text_config" />

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="@dimen/long_20"
        android:src="@drawable/ic_edit_close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvColors" />

    <ImageView
        android:id="@+id/ivCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="@dimen/long_20"
        android:src="@drawable/ic_edit_check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvColors" />
</androidx.constraintlayout.widget.ConstraintLayout>